# journal-ai-reporter

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
cornell_journal_api/: README.md
cornell_journal_api/src/: config.py  db.py  main.py
cornell_journal_api/tests/: test_endpoint.py
docs/: OWASP_CHECKLIST.md  THREAT_MODEL.md
scripts/: manual_test.py  seed_mock_data.py
src/: __init__.py  config.py  exceptions.py  logger.py  main.py
src/api/: dependencies.py  limiter.py  middleware.py  routes.py
src/modules/converter/: client.py  schemas.py  service.py
src/modules/parser/: README.md  cache.py  categorizer.py  hybrid_classifier.py  keyword_patterns.py  llm_classifier.py  schemas.py  service.py
src/modules/reporter/: ai_client.py  prompts.py  schemas.py  service.py  tag_handlers.py
tests/: conftest.py
tests/integration/: test_api.py  test_full_pipeline.py
tests/unit/: test_classification_cache.py  test_converter.py  test_hybrid_classifier.py  test_hybrid_e2e.py  test_keyword_patterns.py  test_llm_classifier.py  test_parser.py  test_reporter.py
