[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "journal-ai-reporter"
version = "0.1.0"
description = "AI-powered reporting service for Cornell Journal entries with tag-based commands"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Deniz Tanisma" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --cov=src --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: unit tests with mocked dependencies",
    "integration: end-to-end pipeline tests",
    "security: prompt injection and auth tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/main.py", "*/__init__.py"]
